# superexceptions

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp
include/lh/: superexceptions.hpp
